Update 'j139lyr7h-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:9a9fe01dfd9adfee6a991872848778adc3024154@sha256:768f2216ad5fa115e16c9c916c3e3278da6e351a26d9f7f973268bb8b2c9eb4a

--- a/components/j139lyr7h-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/j139lyr7h-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j139lyr7h-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:9a9fe01dfd9adfee6a991872848778adc3024154@sha256:768f2216ad5fa115e16c9c916c3e3278da6e351a26d9f7f973268bb8b2c9eb4a
+          name: container-image
